fix: 유저역할 반환 -> 유저프로필반환을 통한 반환값 확대